# diverg-auto

./: .gitignore  LICENSE  README.md  pyproject.toml
diverg_lite/: __init__.py  attack_path.py  cli.py  models.py  scanner.py  stealth.py
diverg_lite/probes/: __init__.py  auth.py  base.py  discovery.py  redirect.py  sqli.py  ssrf.py  traversal.py  xss.py
docs/: ARTICLE_DIVERG_AUTO.md  TWEET_DIVERG_AUTO.md  TWEET_THREAD_DIVERG_AUTO.md
examples/: basic_scan.py  openclaw_integration.py
skills/: diverg-security-scan.md
tests/: test_integration.py  test_probes_unit.py
