[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name remains diverg-lite; product and repo: diverg-auto
name = "diverg-lite"
version = "0.3.0"
description = "diverg-auto — lightweight web security scanner (headers, SSL/TLS, CSP, cookies, content). Built for autonomous agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "diverg-auto"}]
keywords = ["security", "scanner", "headers", "ssl", "csp", "openclaw", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
diverg-scan = "diverg_lite.cli:main"

[project.urls]
Homepage = "https://github.com/fennq/diverg-auto"
Repository = "https://github.com/fennq/diverg-auto"

[tool.setuptools.packages.find]
include = ["diverg_lite*"]
